--- a/rcAdmin/ForwardingQuotation/Index.cshtml
+++ b/rcAdmin/ForwardingQuotation/Index.cshtml
@@ -3,37 +3,40 @@
     var db = Database.Open("Checking_Master");
     //Database.OpenConnectionString("Checking_Master")
 
-    //delete record
-    var quotationId = Request["id"];
-
-    if (!quotationId.IsEmpty())
+    //delete record 
+    var zoneId = Request["id"];
+    var svId = Request["sv"];
+    if (!zoneId.IsEmpty() && !svId.IsEmpty())
     {
-        var sqlDelete = "delete dbo.Forwarding_Quotation where Id_Forwarding_Quotation=@0";
-        db.Execute(sqlDelete, quotationId);
+        var sqlDelete = "delete dbo.Forwarding_Quotation where Id_Forwarding_Zone=@0 and Id_Forwarding_Service=@1";
+        db.Execute(sqlDelete, zoneId, svId);
         Response.Redirect("Index");
     }
 
 
     var qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when fq.Type=0 then 'DOX' else 'WPX' end as Type_Name" +
-               " from Forwarding_Quotation AS fq" +
-                " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" +
-                " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" +
-                " order by fq.Id_Forwarding_Quotation desc";
-    var data = db.Query(qStr);
+               " from Forwarding_Quotation AS fq" + 
+                " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" + 
+                " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" + 
+                " order by fq.Id_Forwarding_Zone desc";
+    var data = db.Query(qStr);    
 
     var grid = new WebGrid(source: data,
                             rowsPerPage: 20);
 
 
     //Search
+    var option = Request["fwSearch"];
+    
     var searchQuo = Request["searchQuo"];
-    if (searchQuo == "")
+
+    if(searchQuo == "")
     {
         qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when Type=0 then 'DOX' else 'WPX' end as Type_Name " +
                " from Forwarding_Quotation AS fq" +
-                " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" +
-                " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" +
-                " order by fq.Id_Forwarding_Quotation desc";
+                " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" + 
+                " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" + 
+                " order by fq.Id_Forwarding_Zone desc";
         data = db.Query(qStr);
 
         grid = new WebGrid(source: data,
@@ -41,11 +44,37 @@
     }
     else
     {
-        qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when Type=0 then 'DOX' else 'WPX' end as Type_Name " +
-               " from Forwarding_Quotation AS fq" +
-                " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" +
-                " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" +
-                " where fz.Forwarding_Zone LIKE '%" + searchQuo + "%' order by fq.Id_Forwarding_Quotation desc";
+        if(option == "0"){
+            qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when Type=0 then 'DOX' else 'WPX' end as Type_Name " +
+                   " from Forwarding_Quotation AS fq" +
+                    " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" + 
+                    " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" + 
+                    " where fs.Forwarding_Service_Name LIKE '%" + searchQuo + "%' order by fq.Id_Forwarding_Zone desc";
+        }
+        else if(option == "1"){
+            qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when Type=0 then 'DOX' else 'WPX' end as Type_Name " +
+                   " from Forwarding_Quotation AS fq" +
+                    " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" + 
+                    " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" + 
+                    " where fz.Forwarding_Zone LIKE '%" + searchQuo + "%' order by fq.Id_Forwarding_Zone desc";
+        }
+        else if(option == "2"){
+            var searchType = 0;
+            if(searchQuo == "DOX")
+            {
+                searchType = 0;
+            }
+            if(searchQuo == "WPX"){
+                searchType = 1;
+            }
+                
+            qStr = "select fz.Forwarding_Zone, fs.Forwarding_Service_Name, fq.*, case when Type=0 then 'DOX' else 'WPX' end as Type_Name " +
+                   " from Forwarding_Quotation AS fq" +
+                    " INNER JOIN Forwarding_Zone as fz on fq.Id_Forwarding_Zone = fz.Id_Forwarding_Zone" + 
+                    " INNER JOIN Forwarding_Service as fs on fq.Id_Forwarding_Service = fs.Id_Forwarding_Service" + 
+                    " where fq.Type = " + searchType + " order by fq.Id_Forwarding_Zone desc";
+        }
+        
         data = db.Query(qStr);
 
         grid = new WebGrid(source: data,
@@ -65,7 +94,14 @@
             </div>
             <div class="searchLine">
                 <form action="" method="POST">
-                    <input type="text" id="search" name="searchQuo" value="" placeholder="Enter Forwarding Quotation ..." class="ac ui-autocomplete-input" />
+                    <div class="selector" style="margin-left: -44%">
+                        <select id="fwSearch" class="selectReq" name="fwSearch" @Validation.For("fwService")>
+                            <option value="0">Forwarding Service</option>
+                            <option value="1">Forwarding Zone</option>
+                            <option value="2">Type</option>
+                        </select>
+                    </div>
+                    <input type="text" id="search" name="searchQuo" value="" placeholder="Enter Forwarding Quotation ..." class="ac ui-autocomplete-input"/> 
                     <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
                 </form>
             </div>
@@ -76,23 +112,23 @@
                         alternatingRowStyle: "alt",
                         footerStyle: "pgr",
                         columns: grid.Columns(
-
-                        @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Id_Forwarding_Zone" title="Widgets"><img
-                            src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
-grid.Column("Forwarding_Zone", "Forwarding Zone", style: "rcGB"),
-                                              grid.Column("Forwarding_Service_Name", "Forwarding Service Name", style: "rcGB"),
-                                              grid.Column("Type_Name", "Type", style: "rcGB"),
-                                              grid.Column("Weight_From", "Weight From", style: "rcGB"),
-                                              grid.Column("Weight_To", "Weight To", style: "rcGB"),
-                                              grid.Column("Pricing", "Price", style: "rcGB"),
-                         grid.Column(format:
-                        @<a href="~/rcAdmin/ForwardingQuotation/Edit?id=@item.Id_Forwarding_Quotation" title="Edit Page"><img src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
+                            
+                @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Id_Forwarding_Zone" title="Widgets"><img
+                    src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
+                                     grid.Column("Forwarding_Zone", "Forwarding Zone", style: "rcGB"),
+                                     grid.Column("Forwarding_Service_Name", "Forwarding Service Name", style: "rcGB"),
+                                     grid.Column("Type_Name", "Type", style: "rcGB"),
+                                     grid.Column("Weight_From", "Weight From", style: "rcGB"),
+                                     grid.Column("Weight_To", "Weight To", style: "rcGB"),
+                                     grid.Column("Pricing", "Price", style: "rcGB"),
                 grid.Column(format:
-                @<a href="~/rcAdmin/ForwardingQuotation/Index?id=@item.Id_Forwarding_Quotation" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                @<a href="~/rcAdmin/ForwardingQuotation/Edit?id=@item.Id_Forwarding_Zone&sv=@item.Id_Forwarding_Service" title="Edit Page"><img src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
+                grid.Column(format:
+                @<a href="~/rcAdmin/ForwardingQuotation/Index?id=@item.Id_Forwarding_Zone&sv=@item.Id_Forwarding_Service" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
                     <img src="images/delete.gif" alt="Delete" class="rcGC" />
                 </a>)
-                            )
-                        )
+                                   )
+                               )
             </div>
         </div>
     </fieldset>
